# gemma-god

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DOCUMENT.md  HACKATHON_DEMO_RUNBOOK.md  NOTICE.md  PREVILLAGE_GEMMA4GOOD_SUBMISSION_PLAN.md  PREVILLAGE_KAGGLE_MEDIA_AND_EVIDENCE_PLAN.md  PREVILLAGE_KAGGLE_SUBMISSION_FIELD_MAP.md  PREVILLAGE_PRODUCTION_INVENTORY_AND_FOOTAGE_PLAN.md  PREVILLAGE_WRITEUP_AND_VIDEO_RESOURCE_BRIEF.md  PREVILLAGE_WRITEUP_REVIEW_AUDIT_20260518.md  PREVILLAGE_WRITEUP_WORKING_DRAFT.md  RAG_HARDENING_STATUS.md  README.md  SERVICE_NAVIGATOR_MODUS_OPERANDI.md  SFT_V5_RECIPE.md  STORY.md  requirements-train.txt  v3-fix.md
android/: .gitignore  README.md  settings.gradle.kts
benchmarks/: README.md
corpora/: sft_v1_english_replay.jsonl  sft_v1_native_ne.jsonl
datasets/: README.md
docs/: CORPUS_RELEASE_PLAN.md  LINKS.md  README.md
examples/: dbg.rs  debug_canon.rs  probe_pdf_text.rs
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
ops/: install_daemon.sh  np.gemma-god.crawler.plist.template  uninstall_daemon.sh
recipes/: README.md  daotanahu_moha_gov_np.json  dofe_gov_np.json  dolma_gov_np.json  dotm_gov_np.json  feb_gov_np.json  jirimun_gov_np.json  lawcommission_gov_np.json  nepalpolice_gov_np.json  qa_nepalembassy_gov_np.json  supremecourt_gov_np.json  tmolkaski_gandaki_gov_np.json
research/: checklist.json
scripts/: apply_tier_overrides.py  assemble_v4_english_replay.py  build_citizen_query_demand.py  build_sft_v6_2_control.py  build_sft_v6_3_control.py  build_v5_pilot100.py  (+86 more)
(+91 files in other folders)
