[package]
name = "gemma-god"
version = "0.1.0"
edition = "2021"
description = "PDF corpus detector for the Nepal government helpdesk (Gemma hackathon)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
tempfile = "3"

[profile.release]
lto = "thin"
