[package]
name = "gemma-god"
version = "0.1.0"
edition = "2021"
description = "PDF corpus detector for the Nepal government helpdesk (Gemma hackathon)"
license = "CC-BY-4.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
tempfile = "3"
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
url = "2"
psl = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "process", "io-util", "signal"] }
async-trait = "0.1"
scraper = "0.24"
bytes = "1"
sha2 = "0.10"
rand = "0.9"
hex = "0.4"
pdf-extract = "0.9"

[dev-dependencies]
wiremock = "0.6"

[profile.release]
lto = "thin"
